# altum

./: .gitmodules  CMakeLists.txt
demo/: CMakeLists.txt  demo_bybit.cpp
headers_for_mac_ide/: CMakeLists.txt
src/: CMakeLists.txt
src/ExchangeCounter/: CMakeLists.txt  WsData.cpp
src/common/: CMakeLists.txt  market_data.cpp  market_data.h
src/exchange_counter/: CMakeLists.txt  websocket_data.cpp  websocket_data.h
src/exchange_counter/bybit/: CMakeLists.txt  bybit.cpp  bybit.h  parse_json.cpp  parse_json.h  parse_json_test.cpp
src/util/: CMakeLists.txt  misc.h
